# crypto-streaming-lakehouse

./: .env.example  .gitignore  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
consumer/: batch_buffer.py  consumer.py  main.py  metrics.py  repository.py
dags/: crypto_pipeline_dag.py  dag_callbacks.py  metabase_sync.py
data/: crypto_lakehouse.duckdb
data/gold/gold_trade_stats_1min/year=2026/month=04/day=23/: part-4f4ee3c9-00eb-47b8-93d1-9eb931b401c9.parquet
data/gold/gold_trade_stats_1min/year=2026/month=04/day=24/: part-ca38c9d0-88da-4613-955d-5e7a92c5c823.parquet
data/gold/gold_vwap_1min/: .placeholder.parquet
data/gold/gold_vwap_1min/year=2026/month=04/day=24/: part-5160b76f-fa84-46e9-b4bf-c83b39406bb0.parquet  part-e5d3801c-9786-4cf0-9851-db45d43bdd37.parquet
data/gold_trade_stats_1min/: .placeholder.parquet
dbt/: .user.yml  dbt_project.yml  package-lock.yml  profiles.yml
dbt/macros/: vwap_bounds.sql
dbt/models/gold/: gold_trade_stats_1min.sql  gold_vwap_1min.sql  schema.yml
dbt/models/silver/: schema.yml  stg_trades.sql
dbt/models/staging/: sources.yml
docker/: metabase.Dockerfile
docs/: airflow_setup.md  metabase_queries.sql  metabase_setup.md  naming_conventions.md
gold/gold_trade_stats_1min/year=2026/month=04/day=24/: part-9c2d3c9f-10d6-4d23-b50a-1154cba1a73a.parquet
gold/gold_vwap_1min/year=2026/month=04/day=23/: part-6b8e1a55-d1c2-4107-913d-e515cfce342c.parquet
infra/: init_airflow.sh  migrate.py  prometheus.yml  rabbitmq_setup.py
lakehouse/: export.py  exporter.py  init_catalog.py  s3_uploader.py  schema.py
metabase/: dashboard_export.json
migrations/: 001_bronze_schema.sql  002_bronze_trade_id_index.sql
producer/: logger.py  main.py  metrics.py  publisher.py  schemas.py  utils.py  ws_client.py
shared/: logger.py  metrics.py
tests/: conftest.py
tests/benchmark/: test_insert_perf.py
tests/integration/: test_airflow_compose.py  test_airflow_init.py  test_dag_e2e.py  test_dashboard_export.py  test_metabase_mount.py  test_metabase_queries.py  test_prometheus_config.py  test_repository.py  test_test_env.py
tests/unit/: test_batch_buffer.py  test_consumer.py  test_consumer_main.py  test_dag_callbacks.py  test_export.py  test_exporter.py  test_init_catalog.py  test_logger.py  test_metrics.py  test_pipeline_dag.py  test_producer_main.py  test_s3_uploader.py  test_schema.py  test_schemas.py  test_sync_metabase.py  test_ws_client.py
